// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate cli app LICENSE ["/Users/jason/projects/cspell5/packages/cspell/LICENSE"] 1`] = `Array []`;

exports[`Validate cli app bad config ["-c", "/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts", "/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts"] 1`] = `Array []`;

exports[`Validate cli app check LICENSE ["check", "/Users/jason/projects/cspell5/packages/cspell/LICENSE"] 1`] = `
Array [
  "MIT License",
  "",
  "Copyright (c) 2017 Jason Dent",
  "",
  "Permission is hereby granted, free of charge, to any person obtaining a copy",
  "of this software and associated documentation files (the \\"Software\\"), to deal",
  "in the Software without restriction, including without limitation the rights",
  "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell",
  "copies of the Software, and to permit persons to whom the Software is",
  "furnished to do so, subject to the following conditions:",
  "",
  "The above copyright notice and this permission notice shall be included in all",
  "copies or substantial portions of the Software.",
  "",
  "THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR",
  "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,",
  "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE",
  "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER",
  "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,",
  "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE",
  "SOFTWARE.",
  "",
]
`;

exports[`Validate cli app check help ["check", "--help"] 1`] = `
Array [
  "Usage: cspell check [options] <files...>",
  "",
  "Spell check file(s) and display the result. The full file is displayed in color.",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app check missing ["check", "/Users/jason/projects/cspell5/packages/cspell/missing-file.txt"] 1`] = `Array []`;

exports[`Validate cli app check with spelling errors ["check", "/Users/jason/projects/cspell5/packages/cspell/samples/Dutch.txt"] 1`] = `
Array [
  "                              [",
  "NEDERLANDS",
  "]",
  "        U ",
  "wordt",
  " ",
  "vriendelijk",
  " ",
  "verzocht",
  " om dit ",
  "bestand",
  " (\\"README_nl_NL.txt\\")",
  "      te ",
  "lezen",
  " en mee te ",
  "leveren",
  " bij ",
  "iedere",
  " ",
  "kopie",
  " van dit ",
  "taalhulpbestand",
  ".",
  "",
  "1. ",
  "Naam",
  ": ",
  "Nederlandstalige",
  " ",
  "woordenlijst",
  " ",
  "voor",
  " ",
  "spellingcontrole",
  " - OpenTaal",
  "2. ",
  "Versie",
  " ",
  "woordenlijst",
  ": 2.00G; ",
  "versie",
  " ",
  "spellingcontrole",
  ": 2.00G.",
  "3. ",
  "Vereisten",
  ": Hunspell 1.2.8 en ",
  "hoger",
  "",
  "4. ",
  "Keurmerk",
  " Spelling ",
  "Nederlandse",
  " ",
  "Taalunie",
  ": De ",
  "lijst",
  " met ",
  "basiswoorden",
  " van",
  "   OpenTaal ",
  "draagt",
  " het ",
  "keurmerk",
  " van de ",
  "Nederlandse",
  " ",
  "Taalunie",
  ". ",
  "Voor",
  " ",
  "meer",
  "",
  "   ",
  "informatie",
  " zie: ",
  "http://www.taalunieversum.org/keurmerk",
  "",
  "5. ",
  "Auteursrechten",
  ": © 2006-2010 OpenTaal, © 2001-2005 Simon ",
  "Brouwer",
  " e.a.,",
  "   © 1996 ",
  "Nederlandstalige",
  " Tex ",
  "Gebruikersgroep",
  "",
  "6. ",
  "Licenties",
  ": OpenTaal ",
  "heeft",
  " als ",
  "doel",
  " om ",
  "vrij",
  " ",
  "beschikbare",
  " ",
  "Nederlandstalige",
  "",
  "   ",
  "taalhulpbestanden",
  " te ",
  "ontwikkelen",
  " en te ",
  "verspreiden",
  ". Om breed (her)",
  "gebruik",
  "",
  "   ",
  "mogelijk",
  " te ",
  "maken",
  " ",
  "zijn",
  " de ",
  "taalhulpbestanden",
  " gratis ",
  "beschikbaar",
  " ",
  "onder",
  " de twee",
  "   ",
  "onderstaande",
  ", ",
  "liberale",
  " ",
  "licenties",
  " ",
  "naar",
  " ",
  "keuze",
  " van de ",
  "gebruiker",
  ". U ",
  "wordt",
  " ten",
  "   ",
  "zeerste",
  " ",
  "aangeraden",
  " om ",
  "voorafgaand",
  " aan het ",
  "gebruik",
  " ",
  "kennis",
  " te ",
  "nemen",
  " van de",
  "   ",
  "toepasselijke",
  " ",
  "licentie",
  ".",
  "   A. BSD (",
  "herziene",
  " ",
  "versie",
  "):",
  "   - ",
  "Volledige",
  " ",
  "licentie",
  ": ",
  "http://creativecommons.org/licenses/BSD/legalcode",
  "",
  "   - ",
  "Samenvatting",
  ": ",
  "http://creativecommons.org/licenses/BSD/deed.nl",
  "",
  "   B. Creative Commons, ",
  "Naamsvermelding",
  " 3.0 (",
  "unported",
  ")",
  "   - ",
  "Volledige",
  " ",
  "licentie",
  ": ",
  "http://creativecommons.org/licenses/by/3.0/legalcode",
  "",
  "   - ",
  "Samenvatting",
  ": ",
  "http://creativecommons.org/licenses/by/3.0/deed.nl",
  "",
  "7. ",
  "Steun",
  " OpenTaal: OpenTaal is een ",
  "vrijwilligersproject",
  " ",
  "zonder",
  " ",
  "winstoogmerk",
  ".",
  "   Door uw (",
  "kleine",
  ") ",
  "financiële",
  " ",
  "steun",
  " kan OpenTaal ",
  "meer",
  " ",
  "activiteiten",
  " ",
  "ontplooien",
  "",
  "   en het project ",
  "professionaliseren",
  ". Uw ",
  "donatie",
  " is van harte ",
  "welkom",
  " op",
  "   ",
  "rekeningnummer",
  " 15.62.32.782 t.n.v. ",
  "Stichting",
  " OpenTaal. Uw ",
  "giften",
  " ",
  "zijn",
  "",
  "   ",
  "aftrekbaar",
  " van de ",
  "belasting",
  ". ",
  "Stichting",
  " OpenTaal is ",
  "namelijk",
  " door de",
  "   ",
  "Belastingdienst",
  " ",
  "erkend",
  " als ",
  "ANBI",
  ", ",
  "oftewel",
  " \\"",
  "Algemeen",
  " Nut ",
  "Beogende",
  " ",
  "Instelling",
  "\\".",
  "   Zie: ",
  "http://belastingdienst.nl/anbi/",
  "",
  "8. ",
  "Meedoen",
  ": ",
  "Iedereen",
  " is ",
  "welkom",
  " om mee te ",
  "doen",
  ". Meld ",
  "fouten",
  ", ",
  "discussieer",
  " mee op",
  "   de ",
  "mailinglijst",
  " of ",
  "draai",
  " Harvester. Door bij te ",
  "dragen",
  " aan het project ",
  "stemt",
  "",
  "   u ",
  "ermee",
  " in dat uw ",
  "bijdrage",
  " aan het ",
  "desbetreffende",
  " ",
  "taalhulpbestand",
  " ",
  "beschikbaar",
  "",
  "   ",
  "komt",
  " ",
  "onder",
  " ",
  "vrije",
  " en/of ",
  "opensource",
  " ",
  "licenties",
  ". ",
  "Indien",
  " u dat ",
  "wenst",
  ", dan kan uw",
  "   ",
  "naam",
  " op de website ",
  "genoemd",
  " ",
  "worden",
  ". We ",
  "ontvangen",
  " uw ",
  "schriftelijk",
  " ",
  "verzoek",
  "",
  "   ",
  "daarvoor",
  " ",
  "graag",
  ".",
  "9. ",
  "Rechten",
  " van ",
  "derden",
  ": OpenTaal ",
  "respecteert",
  " de ",
  "rechten",
  " van ",
  "derden",
  " en",
  "   wil haar ",
  "gegevens",
  " ",
  "vrij",
  " ",
  "beschikbaar",
  " ",
  "houden",
  ". ",
  "Voor",
  " ",
  "bijdragen",
  " aan het project mag",
  "   u ",
  "daarom",
  " ",
  "niet",
  " ",
  "zonder",
  " ",
  "toestemming",
  " ",
  "gebruikmaken",
  " van ",
  "beschermde",
  " ",
  "naslagwerken",
  ",",
  "   ",
  "zoals",
  " ",
  "woordenboeken",
  ". Wel is het ",
  "toegestaan",
  " om ",
  "gebruik",
  " te ",
  "maken",
  " van de",
  "   ",
  "materialen",
  " van de ",
  "Nederlandse",
  " ",
  "Taalunie",
  ", ",
  "zoals",
  " de ",
  "leidraad",
  " en de ",
  "woordenlijst",
  ".",
  "   ",
  "Indien",
  " u van ",
  "mening",
  " bent dat OpenTaal ",
  "inbreuk",
  " ",
  "maakt",
  " op uw ",
  "rechten",
  ", dan",
  "   ",
  "verzoeken",
  " we u ",
  "hierover",
  " zo ",
  "spoedig",
  " ",
  "mogelijk",
  " ",
  "schriftelijk",
  " contact met ons op",
  "   te ",
  "nemen",
  ".",
  "10.Contact: ",
  "Stichting",
  " OpenTaal, ",
  "http://www.opentaal.org,",
  " ",
  "bestuur@opentaal.org",
  "",
  "_________________________________________________________________________________",
  "                                [ENGLISH]",
  "        You are kindly requested to read this file \\"README_nl_NL.txt\\"",
  "     and to keep a copy of it with every copy you make of this language file.",
  "",
  "1. Name: Dutch word list for spell checking - OpenTaal",
  "2. Version of words list: 2.00G; version spell checking: 2.00G",
  "3. Requirements: Hunspell 1.2.8 and higher",
  "4. Spelling Seal of Dutch Language Union: The OpenTaal list of lemmas has",
  "   received the Spelling Seal of Approval from the Dutch Language Union, the",
  "   formal Dutch language institute. For more information please see:",
  "   ",
  "http://www.taalunieversum.org/keurmerk/",
  "",
  "5. Copyrights: © 2006-2010 OpenTaal, © 2001-2005 Simon ",
  "Brouwer",
  " e.a.,",
  "   © 1996 ",
  "Nederlandstalige",
  " Tex ",
  "Gebruikersgroep",
  "",
  "6. Licenses: OpenTaal aims to create and publish free Dutch language files. To",
  "   enable the broadest (re)use the language files are freely available under the",
  "   below, liberal licenses at the discretion of the user. We strongly recommend",
  "   to read the applicable license before usage.",
  "   A. BSD (revised version):",
  "   - Full license text: ",
  "http://creativecommons.org/licenses/BSD/legalcode",
  "",
  "   - Summary: ",
  "http://creativecommons.org/licenses/BSD/deed.en",
  "",
  "   B. Creative Commons, Attribution 3.0 (",
  "unported",
  ")",
  "   - Full license text: ",
  "http://creativecommons.org/licenses/by/3.0/legalcode",
  "",
  "   - Summary: ",
  "http://creativecommons.org/licenses/by/3.0/deed.en",
  "",
  "7. Support OpenTaal: OpenTaal is a non-profit volunteer project. With your",
  "   (small) financial support OpenTaal will further expand its activities and",
  "   enhance its professionalism. Your donation is welcome at",
  "   account number: 15.62.32.782, BIC: ",
  "RABONL",
  "2U, ",
  "IBAN",
  ": NL88",
  "RABO",
  "0156232782 of",
  "   ",
  "Stichting",
  " OpenTaal / OpenTaal Foundation. In the Netherlands your donations",
  "   are tax deductible. OpenTaal Foundation has been designated by the Dutch Tax",
  "   Administration as an Institution for General Benefit (",
  "algemeen",
  " nut ",
  "beogende",
  "",
  "   ",
  "instelling",
  " or ",
  "ANBI",
  "). Please see: ",
  "http://belastingdienst.nl/anbi/",
  "",
  "8. Participate: Everyone is welcome to participate. Please give feedback,",
  "   discuss on the mailing list or run Harvester. By contributing to the project",
  "   you agree that your contribution is available under free or/open source",
  "   licenses. In case you wish, your name will be mentioned on the website. Your",
  "   are invited to send us your written request.",
  "9. Rights of third parties: OpenTaal respects the rights of third parties and",
  "   aims to keep its data freely available. Therefore you may no use protected",
  "   sources of third parties, i.e. dictionaries, without their permission when",
  "   you contribute to the project. It is permitted to use the materials of the",
  "   Dutch Language Union, i.e. their spelling instruction and word list. In case",
  "   you believe OpenTaal is violating your rights, we ask you to send us a",
  "   written notice as soon as possible.",
  "10.Contact: OpenTaal Foundation, ",
  "http://www.opentaal.org,",
  " ",
  "bestuur@opentaal.org",
  "",
  "",
  "cspell:language en,nl",
  "",
]
`;

exports[`Validate cli app cspell-bad.json ["-c", "/Users/jason/projects/cspell5/packages/cspell/samples/cspell-bad.json", "/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts"] 1`] = `Array []`;

exports[`Validate cli app cspell-import-missing.json ["-c", "/Users/jason/projects/cspell5/packages/cspell/samples/linked/cspell-import-missing.json", "/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts"] 1`] = `Array []`;

exports[`Validate cli app current_file ["/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts"] 1`] = `Array []`;

exports[`Validate cli app current_file --verbose ["--verbose", "/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts"] 1`] = `Array []`;

exports[`Validate cli app current_file languageId ["/Users/jason/projects/cspell5/packages/cspell/src/app.test.ts", "--languageId=typescript"] 1`] = `Array []`;

exports[`Validate cli app link ["link", "add", "cspell-dict-cpp/cspell-ext.json"] 1`] = `Array []`;

exports[`Validate cli app link ["link", "list"] 1`] = `Array []`;

exports[`Validate cli app link ["link", "ls"] 1`] = `Array []`;

exports[`Validate cli app link ["link", "remove", "cspell-dict-cpp/cspell-ext.json"] 1`] = `Array []`;

exports[`Validate cli app link ["link"] 1`] = `Array []`;

exports[`Validate cli app must find force no error ["*.not", "--no-must-find-files"] 1`] = `Array []`;

exports[`Validate cli app must find with error ["*.not", "--must-find-files"] 1`] = `Array []`;

exports[`Validate cli app no-args [] 1`] = `
Array [
  "Usage: cspell lint [options] [files...]",
  "",
  "Check spelling",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  -v, --verbose               display more information about the files being",
  "                              checked and the configuration",
  "  --local <local>             Set language locals. i.e. \\"en,fr\\" for English and",
  "                              French, or \\"en-GB\\" for British English.",
  "  --language-id <language>    Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --languageId <language>     Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --wordsOnly                 Only output the words not found in the",
  "                              dictionaries.",
  "  -u, --unique                Only output the first instance of a word not",
  "                              found in the dictionaries.",
  "  --debug                     Output information useful for debugging",
  "                              cspell.json files.",
  "  -e, --exclude <glob>        Exclude files matching the glob pattern",
  "  --no-issues                 Do not show the spelling errors.",
  "  --no-summary                Turn off summary message in console",
  "  -s, --silent                Silent mode, suppress error messages",
  "  -r, --root <root folder>    Root directory, defaults to current directory.",
  "  --must-find-files           Error if no files are found (default: true)",
  "  --no-must-find-files        Do not error is no files are found",
  "  --legacy                    Legacy output",
  "  -h, --help                  display help for command",
  "",
  "",
  "Examples:",
  "    cspell \\"*.js\\"                   Check all .js files in the current directory",
  "    cspell \\"**/*.js\\"                Check all .js files from the current directory",
  "    cspell \\"src/**/*.js\\"            Only check .js under src",
  "    cspell \\"**/*.txt\\" \\"**/*.js\\"     Check both .js and .txt files.",
  "    cat LICENSE | cspell stdin      Read from stdin the contents of LICENSE",
  "",
]
`;

exports[`Validate cli app not found error by default ["*.not"] 1`] = `Array []`;

exports[`Validate cli app samples/Dutch.txt ["/Users/jason/projects/cspell5/packages/cspell/samples/Dutch.txt"] 1`] = `Array []`;

exports[`Validate cli app trace hello ["trace", "hello"] 1`] = `Array []`;

exports[`Validate cli app trace help ["trace", "-h"] 1`] = `
Array [
  "Usage: cspell trace [options] <words...>",
  "",
  "Trace words",
  "",
  "Options:",
  "  -c, --config <cspell.json>  Configuration file to use.  By default cspell",
  "                              looks for cspell.json in the current directory.",
  "  --local <local>             Set language locals. i.e. \\"en,fr\\" for English and",
  "                              French, or \\"en-GB\\" for British English.",
  "  --languageId <language>     Force programming language for unknown",
  "                              extensions. i.e. \\"php\\" or \\"scala\\"",
  "  --no-color                  Turn off color.",
  "  --color                     Force color",
  "  -h, --help                  display help for command",
  "",
]
`;

exports[`Validate cli app trace not-in-any-dictionary ["trace", "not-in-any-dictionary"] 1`] = `Array []`;

exports[`Validate cli app with spelling errors ["/Users/jason/projects/cspell5/packages/cspell/samples/Dutch.txt"] 1`] = `Array []`;

exports[`Validate cli app with spelling errors ["--debug", "/Users/jason/projects/cspell5/packages/cspell/samples/Dutch.txt"] 1`] = `Array []`;

exports[`Validate cli app with spelling errors ["--silent", "/Users/jason/projects/cspell5/packages/cspell/samples/Dutch.txt"] 1`] = `Array []`;
